1. add logback core and classic 1.0.9 2. change task property of ShiftTypeTaskTodo from single task to List of task 3. add XStream alias to class Task and TaskSkillRequirement 4. change log category in logback.xml

--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,15 @@
 			<artifactId>optaplanner-benchmark</artifactId>
 			<version>6.1.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.9</version>
+		</dependency>
 	</dependencies>
 </project>
